# ai-worker-bridge-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  SPEC.md  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml
ai_bridge/: README.md  __init__.py  audit.py  auth.py  config.py  exceptions.py  logging_config.py  manager.py  metrics.py  permissions.py  server.py  store.py  task_state.py  workers.py
ai_watchdog/: Dockerfile  README.md  test_watchdog.py  watchdog.py
tests/: test_auth.py  test_backpressure.py  test_config.py  test_e2e_idempotency_http.py  test_health_metrics.py  test_idempotency.py  test_integration.py  test_permissions.py  test_professionalization.py  test_recovery.py  test_release_docs.py  test_task_state.py
